--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -112,7 +112,6 @@ on boot
 #   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
     setprop net.tcp.buffersize.wifi    524288,2097152,4194304,262144,524288,1048576
 
-
     setprop ro.telephony.call_ring.multiple false
 
     #enable camera read sensors data
@@ -120,7 +119,6 @@ on boot
 
     #Remove SUID bit for iproute2 ip tool
     chmod 0755 /system/bin/ip
-
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
@@ -147,12 +145,6 @@ on boot
     write /proc/sys/net/core/rmem_max  8388608
     write /proc/sys/net/core/wmem_max  8388608
 
-    # To prevent out of order acknowledgements from making
-    # connection tracking to treat them as not belonging to
-    # the connection they belong to.
-    # Otherwise, a weird issue happens in which some long
-    # connections on high-throughput links get dropped when
-    # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
     # Set the console loglevel to < KERN_INFO
@@ -180,17 +172,34 @@ on boot
     # bond0 used by FST Manager
     chown wifi wifi /sys/class/net/bond0/bonding/queue_id
 
-    # bug244097, enlarge the log buffer size,xuchao,20170206,start
     setprop persist.logd.size 2097152
-    # bug244097, enlarge the log buffer size,xuchao,20170206,end
+    
+    # Fingerprint
+    setprop persist.sys.fp.vendor none
+    start gx_fpd
 
-    #bug 274787 - 【JIRA】【HONGMI-31927】 [D1-P2][fingerprint] set finger pay prop huangfusheng.wt 20170816 start
-    #on property:persist.sys.fp.vendor=fpc
-      #setprop ro.boot.fpsensor fpc
-    #on property:persist.sys.fp.vendor=goodix
-	#setprop ro.boot.fpsensor goodix
-	#setprop goodix.fp.miui.analyse 1
-    #bug 274787 - 【JIRA】【HONGMI-31927】 [D1-P2][fingerprint] set finger pay prop huangfusheng.wt 20170816 end
+    on property:persist.sys.fp.vendor=fpc
+      setprop ro.boot.fpsensor fpc
+    on property:persist.sys.fp.vendor=goodix
+	setprop ro.boot.fpsensor goodix
+    setprop goodix.fp.miui.analyse 1
+
+    # DT2W
+    chown system system /sys/devices/soc/78b7000.i2c/i2c-3/3-0038//input/input2/device/fts_gesture_mode
+    chmod 660 /sys/devices/soc/78b7000.i2c/i2c-3/3-0038//input/input2/device/fts_gesture_mode
+    chown system system /sys/goodix_gesture/gesture_enable
+    chmod 660 /sys/goodix_gesture/gesture_enable
+
+    chown system system /sys/devices/soc/soc:fpc1020/compatible_all
+    chmod 0664 /sys/devices/soc/soc:fpc1020/compatible_all
+    chown system system /sys/devices/soc/soc:fpc1020/irq
+    chmod 0660 /sys/devices/soc/soc:fpc1020/irq
+    chown system system /sys/devices/soc/soc:fpc1020/hw_reset
+    chmod 0660 /sys/devices/soc/soc:fpc1020/hw_reset
+    chown system system /sys/devices/soc/soc:fpc1020/wakeup_enable
+    chmod 0660 /sys/devices/soc/soc:fpc1020/wakeup_enable
+    chown system system /sys/devices/soc/soc:fpc1020/wakeup_enable
+    chmod 0660 /sys/devices/soc/soc:fpc1020/wakeup_enable
 
     # Allow access to emmc rawdump block partition and dload sysfs node
     chown root system /dev/block/bootdevice/by-name/rawdump -p /dev/block/
@@ -205,6 +214,9 @@ on post-fs-data
     mkdir /data/misc/stargate/bg_estimation 0770 system system
     mkdir /data/misc/stargate/calib_test 0770 system system
     mkdir /data/misc/stargate/database 0770 system system
+
+    # Create dir for fpc
+    mkdir /data/fpc 0770 system system
 
     # Create directory for TZ Apps
     mkdir /data/misc/qsee 0770 system system
@@ -390,21 +402,6 @@ service iop /system/bin/iop
     socket iop seqpacket 0666 root system
     writepid /dev/cpuset/system-background/tasks
 
-#service qcomsysd /system/bin/qcom-system-daemon
-#    class main
-#    user root
-#    group root qcom_diag
-
-#service ssr_setup /system/bin/ssr_setup
-#    oneshot
-#    disabled
-
-#service ss_ramdump /system/bin/subsystem_ramdump
-#    class main
-#    user system
-#    group system
-#    disabled
-
 on property:persist.sys.ssr.enable_debug=*
     write /sys/module/subsystem_restart/parameters/enable_debug ${persist.sys.ssr.enable_debug}
 
@@ -456,13 +453,11 @@ service iwprivftm /system/bin/sh /system/etc/iwpriv.agent.sh
 on property:persist.sys.iwpriv=1
     start iwprivftm
 
-#++++>
 on property:sys.ptt_socket_app=1
     start ptt_ffbm
 
 on property:sys.ftmd=1
     start ftmd
-#<++++  wangfajie @ 20160627    Add for WiFi & BT FFBM test.
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
@@ -536,11 +531,6 @@ service rmt_storage /system/bin/rmt_storage
     group wakelock
     writepid /dev/cpuset/system-background/tasks
 
-#service rfs_access /system/bin/rfs_access
-#   class core
-#   user root
-#   group system net_raw
-
 service tftp_server /system/bin/tftp_server
    class core
    user root
@@ -563,13 +553,6 @@ service start_hci_filter /system/bin/wcnss_filter
     user bluetooth
     group bluetooth qcom_diag system wakelock
     disabled
-
-#net_admin capability needed to write rfkill sysfs entry
-#service fmhal_service /system/bin/fmhal_service
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin net_admin
-#    disabled
 
 service config_bt_addr /system/bin/btnvtool -O
     class core
@@ -623,64 +606,12 @@ service btsnoop /system/bin/btsnoop
    disabled
    oneshot
 
-#service bt_logger /system/bin/bt_logger
-#   user bluetooth
-#   group bluetooth net_bt_admin sdcard_rw sdcard_r media_rw
-#   class late_start
-#   disabled
-#   oneshot
-#
-#service ftmd  /system/bin/ftmdaemon
-#   class late_start
-#   user root 
-#   group bluetooth net_bt_admin misc net_bt_stack qcom_diag net_bt
-#   disabled
-#   oneshot
-#
-#service blueduttest /system/bin/sh /system/etc/bluedut.sh
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#
-# openwifi service for factory&RF wifi test.
-#service openwifi /system/bin/sh /system/etc/wifitest.sh
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#
-#service closewifi /system/bin/sh /system/etc/wifitest_close.sh
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#    
-#service bridgemgrd /system/bin/bridgemgrd
-#    class late_start
-#    user radio
-#    group radio qcom_diag
-#    disabled
-
 service port-bridge /system/bin/port-bridge
     class main
     user radio system
     group radio system inet
     disabled
     oneshot
-
-#service qmiproxy /system/bin/qmiproxy
-#    class main
-#    user radio
-#    group radio qcom_diag
-#    disabled
-
-# QMUX must be in multiple groups to support external process connections
-#service qmuxd /system/bin/qmuxd
-#    class main
-#    user root
-#    group radio audio bluetooth gps nfc qcom_diag
-#    disabled
 
 service netmgrd /system/bin/netmgrd
     class main
@@ -729,24 +660,6 @@ on property:ro.data.large_tcp_window_size=true
 on property:sys.sysctl.tcp_adv_win_scale=*
     write /proc/sys/net/ipv4/tcp_adv_win_scale ${sys.sysctl.tcp_adv_win_scale}
 
-#service amp_init /system/bin/amploader -i
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#
-#service amp_load /system/bin/amploader -l 7000
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#
-#service amp_unload /system/bin/amploader -u
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-
 service p2p_supplicant /system/bin/wpa_supplicant \
     -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
     -I/system/etc/wifi/p2p_supplicant_overlay.conf -N \
@@ -754,10 +667,6 @@ service p2p_supplicant /system/bin/wpa_supplicant \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets -puse_p2p_group_interface=1 -dd \
     -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
-#   we will start as root and wpa_supplicant will switch to user wifi
-#   after setting up the capabilities required for WEXT
-#   user wifi
-#   group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -768,10 +677,6 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets -dd \
     -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -782,10 +687,6 @@ service wigig_supplicant /system/bin/wpa_supplicant \
     -m/data/misc/wifi/wigig_p2p_supplicant.conf \
     -O/data/misc/wifi/wigig_sockets -dd \
     -e/data/misc/wifi/wigig_entropy.bin -g@android:wpa_wigig0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
     class main
     socket wpa_wigig0 dgram 660 wifi wifi
     disabled
@@ -853,29 +754,6 @@ service iprenew_wigig0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-#service ptt_socket_app /system/bin/ptt_socket_app -d
-#    class main
-#    user root
-#    group root
-#    oneshot
-#    disabled
-#
-#service ptt_ffbm /system/bin/ptt_socket_app -f -d
-#    user root
-#    group root
-#    disabled
-#    oneshot
-
-#service wifi_ftmd /system/bin/wifi_ftmd
-#    user system
-#    group system inet net_admin
-#    socket wififtmd_server dgram 0660 system system
-#    disabled
-#    oneshot
-
-on property:wifi.ftmd.load=true
-    insmod /system/lib/modules/pronto/pronto_wlan.ko con_mode=5
-
 service cnss_diag /system/bin/cnss_diag -q -f
     class main
     user system
@@ -937,12 +815,6 @@ on property:crypto.driver.load=1
      insmod /system/lib/modules/qce.ko
      insmod /system/lib/modules/qcedev.ko
 
-#service drmdiag /system/bin/drmdiagapp
-#    class late_start
-#     user root
-#     disabled
-#     oneshot
-
 on property:drmdiag.load=1
     start drmdiag
 
@@ -965,13 +837,6 @@ service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     disabled
     oneshot
 
-#service qti-testscripts /system/bin/sh /system/etc/init.qcom.testscripts.sh
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#    seclabel u:r:qti-testscripts:s0
-
 service wifi-sdio-on /system/bin/sh /system/etc/init.qcom.sdio.sh
     class late_start
     group wifi inet
@@ -988,26 +853,12 @@ on property:sys.boot_completed=1
     start qcom-post-boot
     start qti-testscripts
 
-#service atfwd /system/bin/ATFWD-daemon
-#    class late_start
-#    user system
-#    group system radio
-
 service hostapd /system/bin/hostapd -dd /data/hostapd/hostapd.conf
     class late_start
     user root
     group root
     oneshot
     disabled
-
-#service ds_fmc_appd /system/bin/ds_fmc_appd -p "rmnet0" -D
-#    class late_start
-#    group radio wifi inet
-#    disabled
-#    oneshot
-#
-#on property:persist.data.ds_fmc_app.mode=1
-#    start ds_fmc_appd
 
 service ims_regmanager /system/bin/exe-ims-regmanagerprocessnative
     class late_start
@@ -1020,11 +871,6 @@ on property:persist.ims.regmanager.mode=1
 on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  2
-
-#service battery_monitor /system/bin/battery_monitor
-#    user system
-#    group system
-#    disabled
 
 service ril-daemon2 /system/bin/rild -c 2
     class main
@@ -1047,24 +893,6 @@ service usb_uicc_enable /system/bin/sh /system/etc/init.qcom.uicc.sh
     user root
     disabled
     oneshot
-
-#service usb_uicc_daemon /system/bin/usb_uicc_client
-#    class main
-#    user system
-#    group system log net_raw
-#    oneshot
-#
-#on property:sys.usb_uicc.enabled=1
-#    start usb_uicc_enable
-#
-#on property:sys.usb_uicc.enabled=0
-#    start usb_uicc_enable
-#
-#service profiler_daemon /system/bin/profiler_daemon
-#    class late_start
-#    user root
-#    group root
-#    disabled
 
 service hcidump /system/bin/sh /system/etc/hcidump.sh
     user bluetooth
@@ -1159,48 +987,6 @@ on property:sys.wfdservice=enable
 on property:sys.wfdservice=disable
     stop wfdservice
 
-#service RIDL /system/vendor/bin/RIDLClient.exe
-#    class late_start
-#    oneshot
-#    user system
-#    group system inet log sdcard_r sdcard_rw qcom_diag
-    # removed for security team - misc bluetooth radio gps wifi diag media_rw
-    # limited to 12 groups.  Unused: audio usb net_bt_admin net_bt_stac net_raw net_admin
-
-# service for USERDEBUG
-#service LKCore-dbg /system/vendor/bin/LKCore
-#    class late_start
-#    oneshot
-#    disabled
-#    user root
-#    group root system log qcom_diag net_raw
-#
-#service sdlog /system/bin/sdlog
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
-#
-#on property:sys.logd_t2.enable=1
-#    start sdlog
-#
-#on property:sys.logd.enable=1
-#    start sdlog
-#
-#on property:persist.service.logd.enable=1
-#    start sdlog
-#on property:persist.service.logd.enable=0
-#   setprop sys.sdlog.run 0
-#   stop sdlog
-#
-# service for USER
-#service LKCore-rel /system/vendor/bin/LKCore
-#    class late_start
-#    oneshot
-#    disabled
-#    user system
-#    group system log qcom_diag
-
 service qseeproxydaemon /system/vendor/bin/qseeproxydaemon
     class late_start
     user system
@@ -1221,14 +1007,6 @@ service seemp_healthd /system/vendor/bin/seemp_healthd
 on charger
     setprop persist.sys.usb.config charging
 
-#add poweroffhandler
-#service poweroffhandler /system/bin/poweroffhandler
-#    class core
-#    user media
-#    group graphics audio
-#    disabled
-#    oneshot
-
 # Logcat dump daemon, dumps logs to logdump partition
 service logdumpd /system/bin/logcat -b all -v threadtime -D -w /dev/block/bootdevice/by-name/logdump
     class core
@@ -1239,27 +1017,6 @@ service logdumpd /system/bin/logcat -b all -v threadtime -D -w /dev/block/bootde
 # Logdumpd is enabled only for userdebug non-perf build
 on property:ro.logdumpd.enabled=1
     start logdumpd
-
-# blueduttest service for RF BT test.
-#service blueduttest /system/bin/sh /system/etc/bluedut.sh
-#    class late_start
-#    user root 
-#    disabled
-#    oneshot
-#
-# openwifi service for RF wifi test.
-#service openwifi /system/bin/sh /system/etc/wifitest.sh
-#    class late_start
-#    user root 
-#    disabled
-#    oneshot
-#
-# closewifi service for RF wifi test.
-#service closewifi /system/bin/sh /system/etc/wifitest_close.sh
-#    class late_start
-#    user root 
-#    disabled
-#    oneshot
 
 service time_daemon /system/bin/time_daemon
     class main
@@ -1272,19 +1029,3 @@ on property:persist.sys.runin=enable
 
 on property:persist.sys.runin=disable
     write /sys/class/power_supply/battery/device/BatteryTestStatus 0
-
-
-# chenying @ 20161015 add for init audio loopback test tool. Begin
-#service mm_audio_ftm /system/bin/mm-audio-ftm
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#
-#on property:sys.audio_ftm_loopback=1
-#    start mm_audio_ftm
-#
-#on property:sys.audio_ftm_loopback=0
-#    stop mm_audio_ftm
-# chenying End
-
