--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -99,10 +99,10 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
 on init
    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
-#service qfp-daemon /system/bin/qfp-daemon
-#   class late_start
-#   user system
-#   group system drmrpc
+service qfp-daemon /system/bin/qfp-daemon
+   class late_start
+   user system
+   group system drmrpc
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
@@ -132,22 +132,10 @@ service qseecomd /system/bin/qseecomd
    group root
    writepid /dev/cpuset/system-background/tasks
 
-#service aostlmd /system/bin/aostlmd
-#   class late_start
-#   user system
-#   group system net_raw
-
 service perfd /system/vendor/bin/perfd
    class main
    user root
    disabled
-
-#service gamed /system/vendor/bin/gamed
-#   class main
-#   user system
-#   group system
-#   disabled
-#   socket gamed seqpacket 0640 system system
 
 service thermal-engine /system/vendor/bin/thermal-engine
    class main
@@ -182,8 +170,8 @@ on boot
     chown system drmrpc /sys/devices/soc.0/78b7000.i2c/i2c-3/3-0020/input/input0/secure_touch
     chown system drmrpc /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/secure_touch_enable
     chown system drmrpc /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/secure_touch
-   #chown system system /dev/goodix_fp
-   #chmod 0644 /dev/goodix_fp
+   chown system system /dev/goodix_fp
+   chmod 0644 /dev/goodix_fp
    #chown system system /dev/goodix_fp_d6
    #chmod 0644 /dev/goodix_fp_d6
 
@@ -287,25 +275,10 @@ service hbtp /system/vendor/bin/hbtp_daemon
     group system
     disabled
 
-#service dts_configurator /system/bin/dts_configurator
-#    class late_start
-#    user system
-#    group media audio
-#    oneshot
-
-#service dtseagleservice /system/bin/dts_eagle_service
-#    class late_start
-#    user system
-#    group audio media
-#    disabled
-
 service adsprpcd /system/bin/adsprpcd
     class main
     user media
     group media
-
-#on property:init.svc.dts_configurator=stopped
-#    start dtseagleservice
 
 service per_mgr /system/bin/pm-service
     class core
@@ -340,115 +313,29 @@ on boot
     write /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/fw_name PR1702898-s3528t_00260005_00380008.img
     write /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/update_fw 1
 
-#service gx_fpd /system/bin/goodixfingerprintd
-#    class late_start
-#    user system
-#    group system
-#    disabled
-#
-#on property:persist.sys.fp.goodix=0
-#    stop gx_fpd
-#
-#on property:persist.sys.fp.goodix=1
-#     start gx_fpd
-#
-#service fingerprintd /system/bin/fingerprintd
-#    class late_start
-#    user system
-#    group system
+service gx_fpd /system/bin/gx_fpd
+    class core
+    user system
+    group system
+    disabled
+    writepid /dev/cpuset/system-background/tasks
+
+on property:persist.sys.fp.goodix=0
+    stop gx_fpd
+
+on property:persist.sys.fp.goodix=1
+     start gx_fpd
+
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
+    group system
 
 service mtservice /system/bin/mtd
     class late_start
 
 service vsimservice /system/bin/vsimd
     class late_start
-##########for loopback test	
-#service loopback_spk1 /system/bin/loopback.sh 1 1
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_spk0 /system/bin/loopback.sh 1 0
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_rec1 /system/bin/loopback.sh 2 1
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_rec0 /system/bin/loopback.sh 2 0
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_hand1 /system/bin/loopback.sh 3 1
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_hand0 /system/bin/loopback.sh 3 0
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_sec1 /system/bin/loopback.sh 4 1
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#service loopback_sec0 /system/bin/loopback.sh 4 0
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#	
-#on property:persist.sys.loopback-spk=1
-#    start loopback_spk1
-#	
-#on property:persist.sys.loopback-spk=0
-#    start loopback_spk0
-#	
-#on property:persist.sys.loopback-rec=1
-#    start loopback_rec1
-#	
-#on property:persist.sys.loopback-rec=0
-#    start loopback_rec0
-#	
-#on property:persist.sys.loopback-mic1=1
-#    start loopback_hand1
-#	
-#on property:persist.sys.loopback-mic1=0
-#    start loopback_hand0
-#	
-#on property:persist.sys.loopback-mic2=1
-#    start loopback_sec1
-#	
-#on property:persist.sys.loopback-mic2=0
-#    start loopback_sec0
-#
-#
-#service tinyhostless /system/bin/tinyhostless -D 0 -P 5 -C 11 -p 8 -n 2 -c 1 -r 48000
-#    user root
-#    group root
-#    disabled
-#    oneshot
-#
-#on property:persist.sys.tinyhostless=0
-#    stop tinyhostless 
-#
-#on property:persist.sys.tinyhostless=1
-#    start tinyhostless
-	
-##########
 
 on property:persist.sys.display_prefer=1
     write /sys/class/graphics/fb0/msm_fb_dispparam 1
