--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -229,10 +229,10 @@
 /sys/devices/virtual/input/input*                   set_delay_ms     0660  system   system
 
 # fpc fingerprint
-#/sys/devices/soc/soc:fpc1020*	hw_reset 0660 system system
-#/sys/devices/soc/soc:fpc1020*	irq 0660 system system
-#/sys/devices/soc/soc:fpc1020*	wakeup_enable 0660 system system
-#/sys/devices/soc/soc:fpc1020*   fingerdown_wait 0660 system system
+/sys/devices/soc/soc:fpc1020*	hw_reset 0660 system system
+/sys/devices/soc/soc:fpc1020*	irq 0660 system system
+/sys/devices/soc/soc:fpc1020*	wakeup_enable 0660 system system
+/sys/devices/soc/soc:fpc1020*   fingerdown_wait 0660 system system
 
 # vm_bms
 /dev/vm_bms               0660   system     system
@@ -264,7 +264,7 @@
 /dev/ramdump*             0640   system     system
 
 # Fingerprint device
-#/dev/qbt1000              0660   system     system
+/dev/qbt1000              0660   system     system
 
 #ImproveTouch device
 /dev/hbtp_input           0660   system     system
@@ -276,11 +276,11 @@
 /dev/block/platform/soc/624000.ufshc/by-name/frp        0600   system     system
 /dev/block/platform/soc/1da4000.ufshc/by-name/frp       0600   system     system
 
-#/sys/devices/soc/soc:fpc1020		hw_reset			0220   system     system
-#/sys/devices/soc/soc:fpc1020		irq	        		0660   system     system
-#/sys/devices/soc/soc:fpc1020      	wakeup_enable	        	0220   system     system
-#/sys/devices/soc/soc:fpc1020      	compatible_all	        	0220   system     system
-#/sys/devices/soc/soc:fpc1020            fingerdown_wait                 0220   system     system
+/sys/devices/soc/soc:fpc1020		hw_reset			0220   system     system
+/sys/devices/soc/soc:fpc1020		irq	        		0660   system     system
+/sys/devices/soc/soc:fpc1020      	wakeup_enable	        	0220   system     system
+/sys/devices/soc/soc:fpc1020      	compatible_all	        	0220   system     system
+/sys/devices/soc/soc:fpc1020            fingerdown_wait                 0220   system     system
 
 #bug 287072 libin.wt 20170926 ADD spi infrared control begin
 /dev/spidev7.1            0660  system system
